@@ -96,31 +96,31 @@ struct _PARAMINFO
 			"Button number to which button 1 should be mapped",
 			XWACOM_PARAM_BUTTON1,
 			VALUE_OPTIONAL, RANGE, 
-			1, 18, SINGLE_VALUE, 1 },
+			1, 19, SINGLE_VALUE, 1 },
 
 		{ "Button2",
 			"Button number to which button 2 should be mapped",
 			XWACOM_PARAM_BUTTON2,
 			VALUE_OPTIONAL, RANGE, 
-			1, 18, SINGLE_VALUE, 2 },
+			1, 19, SINGLE_VALUE, 2 },
 
 		{ "Button3",
 			"Button number to which button 3 should be mapped",
 			XWACOM_PARAM_BUTTON3,
 			VALUE_OPTIONAL, RANGE, 
-			1, 18, SINGLE_VALUE, 3 },
+			1, 19, SINGLE_VALUE, 3 },
 
 		{ "Button4",
 			"Button number to which button 4 should be mapped",
 			XWACOM_PARAM_BUTTON4,
 			VALUE_OPTIONAL, RANGE, 
-			1, 18, SINGLE_VALUE, 4 },
+			1, 19, SINGLE_VALUE, 4 },
 
 		{ "Button5",
 			"Button number to which button 5 should be mapped",
 			XWACOM_PARAM_BUTTON5,
 			VALUE_OPTIONAL, RANGE, 
-			1, 18, SINGLE_VALUE, 5 },
+			1, 19, SINGLE_VALUE, 5 },
 
 		{ "DebugLevel",
 			"Level of debugging trace, default is 1",
